--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,7 +48,7 @@ body {
       display: flex;
       flex-direction: row;
       gap: 2.2em;
-      margin-right: 2em;
+      margin-right: 3em;
 
       a {
         font-size: 0.9rem;
